syntax = "proto3";

package keyauth.user;
option go_package = "github.com/infraboard/keyauth/pkg/user";

import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "pkg/department/pb/department.proto";
import "pkg/user/pb/types.proto";
import "pkg/user/pb/request.proto";
import "pkg/user/pb/enum.proto";

message Password {
    // hash过后的密码
    string password = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"password" json:"password,omitempty"'}
        ];
    // 密码创建时间
    int64 create_at = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at,omitempty"'}
        ];
    // 密码更新时间
    int64 update_at = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at,omitempty"'}
        ];
    // 密码需要被重置
    bool need_reset = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"need_reset" json:"need_reset"'}
        ];
    // 需要重置的原因
    string reset_reason = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"reset_reason" json:"reset_reason"'}
        ];
    // 历史密码
    repeated string history = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"history" json:"history,omitempty"'}
        ];
    // 是否过期
    bool is_expired = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"is_expired"'}
        ];
}

// Status 用户状态
message Status {
    // 是否冻结
    bool locked = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"locked" json:"locked"'}
        ];
    // 冻结时间
    int64 locked_time = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"locked_time" json:"locked_time,omitempty"'}
        ];
    // 冻结原因
    string locked_reson = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"locked_reson" json:"locked_reson,omitempty"'}
        ];
    // 解冻时间
    int64 unlock_time = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"unlock_time" json:"unlock_time,omitempty"'}
        ];  
}

// User info
message User {
    // 用户所属部门
    string department_id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"department_id" json:"department_id" validate:"lte=200"'}
        ];
    // 用户账号名称
    string account = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"account" validate:"required,lte=60"'}
        ];
    // 创建方式
    CreateType create_type = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_type" json:"create_type"'}
        ];
    // 用户创建的时间
    int64 create_at = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at,omitempty"'}
        ];
    // 修改时间
    int64 update_at = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at,omitempty"'}
        ];
    // 如果是子账号和服务账号 都需要继承主用户Domain
    string domain = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"domain" json:"domain,omitempty"'}
        ];
    // 是否是主账号
    UserType type = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type"  json:"type"'}
        ];
    // 数据
    Profile profile = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"profile" json:"profile"'}
        ];
    // 用户的角色(当携带Namesapce查询时会有)
    repeated string roles = 9[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"roles,omitempty"'}
        ];
    // 用户多久未登录时(天), 冻结改用户, 防止僵尸用户的账号被利用'
    int32 expires_days = 10[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"expires_days" json:"expires_days"'}
        ];
    // 用户描述
    string description = 11[
        (google.protobuf.field_tag) = {struct_tag: 'json:"description"'}
        ];
    // 用户是否初始化
    bool is_initialized = 12[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"is_initialized" json:"is_initialized"'}
        ]; 
    // 密码相关信息
    Password hashed_password = 13[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"password" json:"password"'}
        ];
    // 用户状态
    Status status = 14[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"status" json:"status"'}
        ];
    // 部门
    department.Department department = 15[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"department,omitempty"'}
        ];    
}

message Set {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated User items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}